--- a/src/main/resources/templates/motorcycles/form.html
+++ b/src/main/resources/templates/motorcycles/form.html
@@ -20,13 +20,15 @@
         </div>
 
         <div class="form-group">
-            <label for="brand">Marca:</label>
-            <input type="text" id="brand" th:field="*{brand}" class="form-control" required>
-        </div>
-
-        <div class="form-group">
             <label for="model">Modelo:</label>
-            <input type="text" id="model" th:field="*{model}" class="form-control" required>
+            <select id="model" th:field="*{model.id}" class="form-control" required>
+                <option value="">Selecione um Modelo</option>
+                <option th:each="mdl : ${allModels}"
+                        th:value="${mdl.id}"
+                        th:text="${mdl.brand.name + ' - ' + mdl.name}">
+                    Marca - Modelo
+                </option>
+            </select>
         </div>
 
         <div class="form-group">
