--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,6 +12,8 @@
                 <li><a th:href="@{/web/employees}">Funcionários</a></li>
                 <li><a th:href="@{/web/yards}">Pátios</a></li>
                 <li><a th:href="@{/web/units}">Unidades</a></li>
+                <li><a th:href="@{/web/brands}">Marcas</a></li>
+                <li><a th:href="@{/web/models}">Modelos</a></li>
             </ul>
         </nav>
     </div>
